Bug 1710474 - Don't roll up native context menus in response to wheel events. r=mac-reviewers,spohl,bradwerth

I didn't add this check originally because the thinking was that macOS wouldn't dispatch
these events to us anyway as long as a menu is open.
However, our menu opening is asynchronous. So we can still get wheel events between the
mousedown that asks to open the menu, and the delayed perform which then ends up opening
the menu for real. We don't want to cancel opening when we get these straggler events.

Differential Revision: https://phabricator.services.mozilla.com/D115763